# CS280

./: .gitignore  CMakeLists.txt  Cfg.m  LabelDataHandle.m  cascade.m  classifier.py  classify_video.m  compute_features.m  config.py  count_video_frames.m  create_training_data.m  data1.pickle  dynamics.py  extract_negative.m  extract_negative.m~  extract_point.py  extract_texton_hists.py  feature_extraction.py  generate_textons.py  inference.py  label_data.py  label_test_video.m  label_video.m  label_video.py  main.m  main.py  patch_stats.m  prereject.m  test.pkl  to_square_patch.m  train.m  train_cascade.m  train_dymanics.py  utils.py  video_cascade.m  visualize_patches.py  viz_training_set.m  viz_training_set.py
python/: mav.tlog  mav.tlog.raw  run.py  test.py
python/MAVProxy/: mav.tlog  mav.tlog.raw  mavproxy.py
python/MAVProxy/modules/: mav.tlog  mav.tlog.raw  mavproxy_tcpserver.py  mavproxy_vision.py
src/: CMakeLists.txt  \  handle.cpp  main_pi.cpp  main_x86.cpp
src/picam/: .picam.cpp.swp  CMakeLists.txt  picam.cpp
writeup/: writeup.aux  writeup.tex
